Fixes an issue where the search icon on mobile would wrap. Also fixes an issue where the header logo spanned the full width causing inadvertant clicks on the logo instead of the menu.

--- a/themes/greatermedia/assets/css/sass/components/_header.scss
+++ b/themes/greatermedia/assets/css/sass/components/_header.scss
@@ -42,7 +42,8 @@
 }
 
 .header__logo{
-	@include span-columns(4);
+	@include span-columns(2);
+	@include shift(1);
 	@include omega;
 	height: 70px;
 	padding: $header-logo-padding 0;
